--- a/src/app/layout/administracao/paroquias/components/table/paroquias-table.component.scss
+++ b/src/app/layout/administracao/paroquias/components/table/paroquias-table.component.scss
@@ -2,7 +2,7 @@
 @import 'src/styles/font';
 @import 'src/styles/variables';
 
-.decanato-table-wrapper {
+.paroquia-table-wrapper {
   padding-left: 0;
   padding-right: 0;
   margin: 16px 16px 32px 16px;
