--- a/src/app/layout/components/header/header.component.html
+++ b/src/app/layout/components/header/header.component.html
@@ -6,7 +6,7 @@
     </button>
     <div class="collapse navbar-collapse">
         <form class="form-inline my-2 my-lg-0">
-            <input class="form-control mr-sm-2" placeholder="{{ 'Search' | translate }}" type="text" />
+            <input class="form-control mr-sm-2" placeholder="{{ 'Search'}}" type="text" />
         </form>
         <ul class="navbar-nav ml-auto">
             <li class="nav-item dropdown" ngbDropdown>
@@ -15,16 +15,16 @@
                 </a>
                 <div class="dropdown-menu-right" ngbDropdownMenu>
                     <a class="dropdown-item" href="javascript:void(0)">
-                        <i class="fa fa-fw fa-user"></i> {{ 'Profile' | translate }}
+                        <i class="fa fa-fw fa-user"></i> {{ 'Profile' }}
                     </a>
                     <a class="dropdown-item" href="javascript:void(0)">
-                        <i class="fa fa-fw fa-envelope"></i> {{ 'Inbox' | translate }}
+                        <i class="fa fa-fw fa-envelope"></i> {{ 'Inbox'}}
                     </a>
                     <a class="dropdown-item" href="javascript:void(0)">
-                        <i class="fa fa-fw fa-gear"></i> {{ 'Settings' | translate }}
+                        <i class="fa fa-fw fa-gear"></i> {{ 'Settings'}}
                     </a>
                     <a (click)="onLoggedout()" [routerLink]="['/login']" class="dropdown-item">
-                        <i class="fa fa-fw fa-power-off"></i> {{ 'Log Out' | translate }}
+                        <i class="fa fa-fw fa-power-off"></i> {{ 'Log Out' }}
                     </a>
                 </div>
             </li>
