adicionado usuarios, ajustes grupo de oracao

--- a/src/app/layout/components/sidebar/sidebar.component.html
+++ b/src/app/layout/components/sidebar/sidebar.component.html
@@ -19,14 +19,20 @@
                 <ul class="submenu">
                     <li>
                         <a [routerLink]="['/decanatos']" >
-                            <i class="fa fa-monument"></i>&nbsp;
+                            <i class="fa fa-window-restore"></i>&nbsp;
                             <span>{{ 'Decanatos' }}</span>
                         </a>
                     </li>
                     <li>
                         <a [routerLink]="['/paroquias']" >
-                            <i class="fa fa-monument"></i>&nbsp;
+                            <i class="fa fa-university"></i>&nbsp;
                             <span>{{ 'Paróquias' }}</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a [routerLink]="['/usuarios']" >
+                            <i class="fa fa-user"></i>&nbsp;
+                            <span>{{ 'Usuários' }}</span>
                         </a>
                     </li>
                 </ul>
