--- a/src/app/layout/components/header/header.component.html
+++ b/src/app/layout/components/header/header.component.html
@@ -11,20 +11,11 @@
         <ul class="navbar-nav ml-auto">
             <li class="nav-item dropdown" ngbDropdown>
                 <a class="nav-link" href="javascript:void(0)" ngbDropdownToggle>
-                    <i class="fa fa-user"></i> Edvilson <b class="caret"></b>
+                    <i class="fa fa-user"></i> {{userName}}<b class="caret"></b>
                 </a>
                 <div class="dropdown-menu-right" ngbDropdownMenu>
-                    <a class="dropdown-item" href="javascript:void(0)">
-                        <i class="fa fa-fw fa-user"></i> {{ 'Profile' }}
-                    </a>
-                    <a class="dropdown-item" href="javascript:void(0)">
-                        <i class="fa fa-fw fa-envelope"></i> {{ 'Inbox'}}
-                    </a>
-                    <a class="dropdown-item" href="javascript:void(0)">
-                        <i class="fa fa-fw fa-gear"></i> {{ 'Settings'}}
-                    </a>
                     <a (click)="onLoggedout()" [routerLink]="['/login']" class="dropdown-item">
-                        <i class="fa fa-fw fa-power-off"></i> {{ 'Log Out' }}
+                        <i class="fa fa-fw fa-power-off"></i> {{ 'Sair' }}
                     </a>
                 </div>
             </li>
