--- a/src/app/layout/grupo-oracao-table/components/servos/components/servos-dialog/servos-dialog.component.html
+++ b/src/app/layout/grupo-oracao-table/components/servos/components/servos-dialog/servos-dialog.component.html
@@ -37,95 +37,81 @@
                 </div>
             </div>
         </div>
-        <div class="modal-header">
-            <h4 class="modal-title">Ministérios</h4>
+        <div class="row">
+            <div class="col-lg-6">
+                <div class="form-group">
+                    <label for="exampleInputEmail1">Ministério Principal *</label>
+                    <select class="form-control" formControlName="type">
+                        <option value="adolescente">Coordenadores</option>
+                        <option value="adulto">Música & Artes</option>
+                        <option value="jovem">Pregação</option>
+                        <option value="misto">Promoção Humana</option>
+                        <option value="adolescente">Fé e Politica</option>
+                        <option value="adulto">Formação</option>
+                        <option value="jovem">Intercessão</option>
+                        <option value="misto">Cura e Libertação</option>
+                        <option value="adolescente">Jovem</option>
+                        <option value="adulto">Crianças e Adolescentes</option>
+                        <option value="jovem">Comunicação</option>
+                        <option value="misto">Para as Famílias</option>
+                        <option value="adolescente">Universidades</option>
+                        <option value="adulto">Para as Religiosas</option>
+                        <option value="jovem">Seminaristas</option>
+                        <option value="misto">Cristo Sacerdote</option>
+                      </select>
+                </div>
+            </div>
+            <div class="col-lg-6">
+                <div class="form-group">
+                    <label for="exampleInputEmail1">Ministério Secundário </label>
+                    <select class="form-control" formControlName="type">
+                        <option value="adolescente">Coordenadores</option>
+                        <option value="adulto">Música & Artes</option>
+                        <option value="jovem">Pregação</option>
+                        <option value="misto">Promoção Humana</option>
+                        <option value="adolescente">Fé e Politica</option>
+                        <option value="adulto">Formação</option>
+                        <option value="jovem">Intercessão</option>
+                        <option value="misto">Cura e Libertação</option>
+                        <option value="adolescente">Jovem</option>
+                        <option value="adulto">Crianças e Adolescentes</option>
+                        <option value="jovem">Comunicação</option>
+                        <option value="misto">Para as Famílias</option>
+                        <option value="adolescente">Universidades</option>
+                        <option value="adulto">Para as Religiosas</option>
+                        <option value="jovem">Seminaristas</option>
+                        <option value="misto">Cristo Sacerdote</option>
+                      </select>
+                </div>
+            </div>
         </div>
-        <div class="modal-body">
-            <div class="row">
-                <div class="col-lg-1"></div>
-                <div class="col-lg-11">
-                    <div class="form-check form-check-inline">
-                        <input class="form-check-input" type="checkbox" id="inlineCheckbox1" value="option1">
-                        <label class="form-check-label" for="inlineCheckbox1">Coordenadores</label>
-                    </div>
-                    <div class="form-check form-check-inline">
-                        <input class="form-check-input" type="checkbox" id="inlineCheckbox1" value="option1">
-                        <label class="form-check-label" for="inlineCheckbox1">Música & Artes</label>
-                    </div>
-                    <div class="form-check form-check-inline">
-                        <input class="form-check-input" type="checkbox" id="inlineCheckbox2" value="option2">
-                        <label class="form-check-label" for="inlineCheckbox2">Pregação</label>
-                    </div>
-                    <div class="form-check form-check-inline">
-                        <input class="form-check-input" type="checkbox" id="inlineCheckbox3" value="option3">
-                        <label class="form-check-label" for="inlineCheckbox3">Promoção Humana</label>
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-lg-1"></div>
-                <div class="col-lg-11">
-                    <div class="form-check form-check-inline">
-                        <input class="form-check-input" type="checkbox" id="inlineCheckbox1" value="option1">
-                        <label class="form-check-label" for="inlineCheckbox1">Fé e Politica</label>
-                    </div>
-                    <div class="form-check form-check-inline">
-                        <input class="form-check-input" type="checkbox" id="inlineCheckbox1" value="option1">
-                        <label class="form-check-label" for="inlineCheckbox1">Formação</label>
-                    </div>
-                    <div class="form-check form-check-inline">
-                        <input class="form-check-input" type="checkbox" id="inlineCheckbox2" value="option2">
-                        <label class="form-check-label" for="inlineCheckbox2">Intercessão</label>
-                    </div>
-                    <div class="form-check form-check-inline">
-                        <input class="form-check-input" type="checkbox" id="inlineCheckbox3" value="option3">
-                        <label class="form-check-label" for="inlineCheckbox3">Cura e Libertação</label>
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-lg-1"></div>
-                <div class="col-lg-11">
-                    <div class="form-check form-check-inline">
-                        <input class="form-check-input" type="checkbox" id="inlineCheckbox1" value="option1">
-                        <label class="form-check-label" for="inlineCheckbox1">Jovem</label>
-                    </div>
-                    <div class="form-check form-check-inline">
-                        <input class="form-check-input" type="checkbox" id="inlineCheckbox2" value="option2">
-                        <label class="form-check-label" for="inlineCheckbox2">Crianças e Adolescentes</label>
-                    </div>
-                    <div class="form-check form-check-inline">
-                        <input class="form-check-input" type="checkbox" id="inlineCheckbox2" value="option2">
-                        <label class="form-check-label" for="inlineCheckbox2">Comunicação</label>
-                    </div>
-                    <div class="form-check form-check-inline">
-                        <input class="form-check-input" type="checkbox" id="inlineCheckbox3" value="option3">
-                        <label class="form-check-label" for="inlineCheckbox3">Para as Famílias</label>
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-lg-1"></div>
-                <div class="col-lg-11">
-                    
-                    <div class="form-check form-check-inline">
-                        <input class="form-check-input" type="checkbox" id="inlineCheckbox3" value="option3">
-                        <label class="form-check-label" for="inlineCheckbox3">Universidades</label>
-                    </div>
-                    <div class="form-check form-check-inline">
-                        <input class="form-check-input" type="checkbox" id="inlineCheckbox3" value="option3">
-                        <label class="form-check-label" for="inlineCheckbox3">Para as Religiosas</label>
-                    </div>
-                    <div class="form-check form-check-inline">
-                        <input class="form-check-input" type="checkbox" id="inlineCheckbox3" value="option3">
-                        <label class="form-check-label" for="inlineCheckbox3">Seminaristas</label>
-                    </div>
-                    <div class="form-check form-check-inline">
-                        <input class="form-check-input" type="checkbox" id="inlineCheckbox3" value="option3">
-                        <label class="form-check-label" for="inlineCheckbox3">Cristo Sacerdote</label>
-                    </div>
-                </div>
-                
+        <div class="card card-default">
+            <div class="card-header d-flex justify-content-between align-items-center">Formações</div>
+            <!-- /.card-body -->
+            <div class="card-body">
+                <div class="table-responsive">
+                    <table class="table">
+                        <thead>
+                            <tr>
+                              <th scope="col">#</th>
+                              <th scope="col">Formação</th>
+                              <th scope="col">Data Certificado</th>
+                            </tr>
+                          </thead>
+                          <tbody>
+                            <tr>
+                                <th scope="row">1</th>
+                                <td>Formação Humana I</td>
+                                <td>10/05/2009</td>
+                            </tr>
+                            <tr>
+                                <th scope="row">2</th>
+                                <td>Formação Humana II</td>
+                                <td>10/10/2010</td>
+                              </tr>
+                          </tbody>
+                    </table>
+                  </div>
             </div>
         </div>
     </div>
