--- a/src/app/layout/grupo-oracao-table/components/servos/servos.component.html
+++ b/src/app/layout/grupo-oracao-table/components/servos/servos.component.html
@@ -4,7 +4,7 @@
         <!-- /.card -->
         <div class="card card-default">
             <div class="card-header d-flex justify-content-between align-items-center">Servos
-                <button type="button" class="btn btn-sm btn-primary" (click)="addServo()">Add Servo</button>
+                <button type="button" class="btn btn-sm btn-primary" (click)="openDialog(null)">Adicionar Servo</button>
             </div>
             <!-- /.card-body -->
             <div class="card-body">
@@ -13,30 +13,22 @@
                         <thead>
                             <tr>
                               <th scope="col">#</th>
-                              <th scope="col">CPF</th>
                               <th scope="col">Nome</th>
+                              <th scope="col">Ministério Principal</th>
                               <th scope="col">Telefone</th>
                               <th scope="col">Email</th>
                               <th scope="col">Situação</th>
                             </tr>
                           </thead>
                           <tbody>
-                            <tr>
-                                <th scope="row">1</th>
-                                <td>000.999.111-90</td>
-                                <td>Otto Martins</td>
-                                <td>43 997888-9099</td>
-                                <td>otto.martins@gmail.com</td>
-                                <td>Ativo</td>
+                            <tr *ngFor="let item of servos; index as i " (click)="openDialog(item)">
+                                <th scope="row">{{i + 1}}</th>
+                                <td>{{item.name}}</td>
+                                <td>{{describeMinistry(item.mainMinistry)}}</td>
+                                <td>{{item.cellPhone | mask: '(00) 00000-0000'}}</td>
+                                <td>{{item.email}}</td>
+                                <td>{{item.active ? 'Ativo' : 'Inativo'}}</td>
                             </tr>
-                            <tr>
-                                <th scope="row">2</th>
-                                <td>040.881.111-00</td>
-                                <td>José Dantas</td>
-                                <td>43 992988-7657</td>
-                                <td>jose.dantas@gmail.com</td>
-                                <td>Ativo</td>
-                              </tr>
                           </tbody>
                     </table>
                   </div>
