ajuste layout servos

--- a/src/app/layout/grupo-oracao-table/components/servos/components/servos-dialog/servos-dialog.component.html
+++ b/src/app/layout/grupo-oracao-table/components/servos/components/servos-dialog/servos-dialog.component.html
@@ -99,12 +99,11 @@
             </div>
         </form>
 
-        <div style="margin-top: 10px;">
+        <!-- <div style="margin-top: 10px;">
             <div class="card card-default">
                 <div class="card-header d-flex justify-content-between align-items-center">Formações
                     <button type="button" class="btn btn-sm btn-primary" (click)="openDialog(null)">Adicionar Formação</button>
                 </div>
-                <!-- /.card-body -->
                 <div class="card-body">
                     <div class="table-responsive">
                         <table class="table">
@@ -131,7 +130,7 @@
                       </div>
                 </div>
             </div>
-        </div>
+        </div> -->
         
         
     </div>
