--- a/src/app/layout/administracao/usuarios/components/dialog/usuarios-dialog.component.html
+++ b/src/app/layout/administracao/usuarios/components/dialog/usuarios-dialog.component.html
@@ -32,7 +32,7 @@
             <div class="col-lg-6">
                 <div class="form-group">
                     <label>Decanato</label>
-                    <select class="form-control" formControlName="decanatoSetorId" >
+                    <select class="form-control" formControlName="decanatoSetorId" #decanato>
                         <option value="">NENHUM</option>
                         <option *ngFor="let item of decanatos" 
                             [value]="item.id">
@@ -44,13 +44,22 @@
             <div class="col-lg-6">
                 <div class="form-group">
                     <label>Grupo de Oração</label>
-                    <select class="form-control" formControlName="grupoOracaoId" >
+                    <select class="form-control" formControlName="grupoOracaoId" #grupoOracao>
                         <option value="">NENHUM</option>
                         <option *ngFor="let item of listGrupoOracao" 
                             [value]="item.id" >
                         {{item.name }} - {{item.paroquiaCapela?.name}} - {{item.city}}
                         </option>
                     </select>
+                </div>
+            </div>
+            
+        </div>
+        <div class="row">
+            <div class="col-lg-1">
+                <div class="form-check form-check-inline" style="margin-top: 20px;">
+                    <input class="form-check-input"  type="checkbox" formControlName="active" (change)="change($event)" #administrator>
+                    <label class="form-check-label" >Administrador?</label>
                 </div>
             </div>
         </div>
