--- a/src/app/layout/grupo-oracao-table/components/servos/components/servos-dialog/servos-dialog.component.html
+++ b/src/app/layout/grupo-oracao-table/components/servos/components/servos-dialog/servos-dialog.component.html
@@ -19,7 +19,7 @@
                 <div class="col-lg-3">
                     <div class="form-group">
                         <label for="exampleInputEmail1">Data de Nascimento</label>
-                        <input type="text" class="form-control" [specialCharacters]="[ '/' ]"  mask="d0/m0/0000"  formControlName="birthday1">
+                        <input type="text" class="form-control" [specialCharacters]="[ '/' ]"  mask="d0/m0/0000" id="birthday1" formControlName="birthday1" (blur)="onBlurBirthDate($event)">
                     </div>
                 </div>
                 <div class="col-lg-1">
@@ -45,7 +45,7 @@
                 <div class="col-lg-4">
                     <div class="form-group">
                         <label for="exampleInputEmail1">Celular</label>
-                        <input type="text" class="form-control" mask="(00) 00000-0000"  formControlName="cellphone">
+                        <input type="text" class="form-control" mask="(00) 00000-0000"  formControlName="cellphone" id="cellphone" (blur)="onBlurCellPhone($event)">
                     </div>
                 </div>
             </div>
@@ -54,6 +54,7 @@
                     <div class="form-group">
                         <label for="exampleInputEmail1">Ministério Principal *</label>
                         <select class="form-control"  formControlName="mainMinistry">
+                            <option value="discernimento">Em Discernimento</option>
                             <option value="coordenadores">Coordenadores</option>
                             <option value="musica-artes">Música & Artes</option>
                             <option value="pregacao">Pregação</option>
